code improvements conditions service