@@ -1,27 +1,35 @@
 package com.mead.conditions.enrich;
 
-import org.apache.jena.query.*;
-import org.apache.jena.rdf.model.RDFNode;
-import org.apache.jena.sparql.exec.http.QueryExecutionHTTP;
-import org.apache.jena.sparql.exec.http.QueryExecutionHTTPBuilder;
-import org.slf4j.Logger;
+import com.mead.conditions.config.AsyncConfig;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
-import java.util.LinkedHashMap;
-import java.util.stream.Collectors;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Executor;
+import java.util.function.Supplier;
 
 @Component
 public class DbpediaClient {
 
-    private static final Logger log = org.slf4j.LoggerFactory.getLogger(DbpediaClient.class);
+    private static final String SOURCE_TAG = "DBpedia";
+    private static final String CACHE_DBPEDIA_ENRICHMENT = "dbpediaEnrichment";
 
-    private static final String DBO_ABSTRACT = "http://dbpedia.org/ontology/abstract";
-    private static final String DBO_DESCRIPTION = "http://dbpedia.org/ontology/description";
-    private static final String RDFS_COMMENT = "http://www.w3.org/2000/01/rdf-schema#comment";
-    private static final String SPARQL_RESULTS_JSON = "application/sparql-results+json";
+    private static final String DBO = "http://dbpedia.org/ontology/";
+    private static final String DBP = "http://dbpedia.org/property/";
+    private static final String RDFS = "http://www.w3.org/2000/01/rdf-schema#";
+
+    private static final String DBO_ABSTRACT = DBO + "abstract";
+    private static final String DBO_DESCRIPTION = DBO + "description";
+    private static final String RDFS_COMMENT = RDFS + "comment";
+
+    private static final String LANG_EN = "en";
+
+    private static final int LIMIT_ONE = 1;
+    private static final int LIMIT_LABELS = 50;
+    private static final int LIMIT_LITERALS = 10;
 
     @Value("${mead.external.dbpedia.endpoint}")
     private String endpoint;
@@ -29,188 +37,170 @@ public class DbpediaClient {
     @Value("${mead.external.dbpedia.timeout-ms:8000}")
     private long timeoutMs;
 
-    @Cacheable("dbpediaDescription")
-    public String englishDescription(String dbpediaResourceUri) {
-        String abstractLiteral = queryEnglishLiteral(dbpediaResourceUri, DBO_ABSTRACT);
-        if (abstractLiteral != null) return abstractLiteral;
+    private final SparqlHttpClient sparql;
+    private final Executor meadExecutor;
 
-        String descriptionLiteral = queryEnglishLiteral(dbpediaResourceUri, DBO_DESCRIPTION);
-        if (descriptionLiteral != null) return descriptionLiteral;
-
-        return queryEnglishLiteral(dbpediaResourceUri, RDFS_COMMENT);
+    public DbpediaClient(SparqlHttpClient sparql,
+                         @Qualifier(AsyncConfig.MEAD_EXECUTOR) Executor meadExecutor) {
+        this.sparql = sparql;
+        this.meadExecutor = meadExecutor;
     }
 
-    @Cacheable("dbpediaThumbnail")
-    public String thumbnailUrl(String dbpediaResourceUri) {
+    public record DbpediaEnrichment(
+            String description,
+            List<String> symptoms,
+            List<String> riskFactors,
+            String thumbnail
+    ) {}
+
+    @Cacheable(CACHE_DBPEDIA_ENRICHMENT)
+    public DbpediaEnrichment enrichFromResourceUri(String dbpediaResourceUri) {
+        CompletableFuture<String> descriptionFuture = future(() -> fetchEnglishDescription(dbpediaResourceUri));
+        CompletableFuture<List<String>> symptomsFuture = future(() -> fetchSymptoms(dbpediaResourceUri));
+        CompletableFuture<List<String>> riskFactorsFuture = future(() -> fetchRiskFactors(dbpediaResourceUri));
+        CompletableFuture<String> thumbnailFuture = future(() -> fetchThumbnailUrl(dbpediaResourceUri));
+
+        CompletableFuture.allOf(descriptionFuture, symptomsFuture, riskFactorsFuture, thumbnailFuture).join();
+
+        return new DbpediaEnrichment(
+                descriptionFuture.join(),
+                symptomsFuture.join(),
+                riskFactorsFuture.join(),
+                thumbnailFuture.join()
+        );
+    }
+
+    private String fetchEnglishDescription(String resourceUri) {
+        String v1 = queryEnglishLiteral(resourceUri, DBO_ABSTRACT);
+        if (v1 != null) return v1;
+
+        String v2 = queryEnglishLiteral(resourceUri, DBO_DESCRIPTION);
+        if (v2 != null) return v2;
+
+        return queryEnglishLiteral(resourceUri, RDFS_COMMENT);
+    }
+
+    private String fetchThumbnailUrl(String resourceUri) {
         String sparqlQuery = """
-            PREFIX dbo: <http://dbpedia.org/ontology/>
-            SELECT ?thumbnail WHERE {
-              <%s> dbo:thumbnail ?thumbnail .
-            } LIMIT 1
-            """.formatted(dbpediaResourceUri);
+                PREFIX dbo: <%s>
+                SELECT ?thumbnail WHERE {
+                  <%s> dbo:thumbnail ?thumbnail .
+                } LIMIT %d
+                """.formatted(DBO, resourceUri, LIMIT_ONE);
 
-        RDFNode thumbnailNode = selectFirstNode(sparqlQuery);
-        if (thumbnailNode == null) return null;
-        String url = thumbnailNode.isResource() ? thumbnailNode.asResource().getURI() : thumbnailNode.toString();
+        String url = sparql.selectFirstString(request(sparqlQuery, "thumbnail"));
+        if (url == null) return null;
 
-        int queryIndex = url.indexOf('?');
-        return (queryIndex >= 0) ? url.substring(0, queryIndex) : url;
+        int q = url.indexOf('?');
+        return q >= 0 ? url.substring(0, q) : url;
     }
 
-    @Cacheable("dbpediaSymptoms")
-    public List<String> symptoms(String dbpediaResourceUri) {
-        List<String> ontologySymptoms = selectEnglishLabels("""
-            PREFIX dbo: <http://dbpedia.org/ontology/>
-            PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
-            SELECT DISTINCT ?label WHERE {
-              <%s> dbo:symptom ?symptomResource .
-              ?symptomResource rdfs:label ?label .
-              FILTER(LANG(?label)="en")
-            } LIMIT 50
-            """.formatted(dbpediaResourceUri));
+    private List<String> fetchSymptoms(String resourceUri) {
+        List<String> ontologySymptoms = sparql.selectStrings(request("""
+                PREFIX dbo: <%s>
+                PREFIX rdfs: <%s>
+                SELECT DISTINCT ?label WHERE {
+                  <%s> dbo:symptom ?symptomResource .
+                  ?symptomResource rdfs:label ?label .
+                  FILTER(LANG(?label) = "%s")
+                } LIMIT %d
+                """.formatted(DBO, RDFS, resourceUri, LANG_EN, LIMIT_LABELS), "label"));
 
-        if (!ontologySymptoms.isEmpty()) return ontologySymptoms;
+        if (!ontologySymptoms.isEmpty()) return removeDuplicates(ontologySymptoms);
 
-        List<String> propertySymptoms = selectLiteralStrings("""
-            PREFIX dbp: <http://dbpedia.org/property/>
-            SELECT DISTINCT ?symptomLiteral WHERE {
-              <%s> dbp:symptoms ?symptomLiteral .
-              FILTER(LANG(?symptomLiteral)="en" || LANG(?symptomLiteral) = "")
-            } LIMIT 10
-            """.formatted(dbpediaResourceUri), "symptomLiteral");
+        List<String> raw = sparql.selectStrings(request("""
+                PREFIX dbp: <%s>
+                SELECT DISTINCT ?symptomLiteral WHERE {
+                  <%s> dbp:symptoms ?symptomLiteral .
+                  FILTER(LANG(?symptomLiteral) = "%s" || LANG(?symptomLiteral) = "")
+                } LIMIT %d
+                """.formatted(DBP, resourceUri, LANG_EN, LIMIT_LITERALS), "symptomLiteral"));
 
-        return splitList(propertySymptoms);
+        return removeDuplicates(splitCommaList(raw));
     }
 
-    /**
-     * Risk factors fallback:
-     * - dbp:causes (literal list, often comma-separated)
-     * - dbo:medicalCause (resources)
-     * - dbo:complications/dbp:complications (these are "risks" rather than causes; we include them if causes are missing)
-     */
-    @Cacheable("dbpediaRiskFactors")
-    public List<String> riskFactorsOrRisks(String dbpediaResourceUri) {
+    private List<String> fetchRiskFactors(String resourceUri) {
         List<String> causes = new ArrayList<>();
 
-        causes.addAll(selectEnglishLabels("""
-            PREFIX dbo: <http://dbpedia.org/ontology/>
-            PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>
-            SELECT DISTINCT ?label WHERE {
-              <%s> dbo:medicalCause ?causeResource .
-              ?causeResource rdfs:label ?label .
-              FILTER(LANG(?label)="en")
-            } LIMIT 50
-            """.formatted(dbpediaResourceUri)));
+        causes.addAll(sparql.selectStrings(request("""
+                PREFIX dbo: <%s>
+                PREFIX rdfs: <%s>
+                SELECT DISTINCT ?label WHERE {
+                  <%s> dbo:medicalCause ?causeResource .
+                  ?causeResource rdfs:label ?label .
+                  FILTER(LANG(?label) = "%s")
+                } LIMIT %d
+                """.formatted(DBO, RDFS, resourceUri, LANG_EN, LIMIT_LABELS), "label")));
 
-        causes.addAll(splitList(selectLiteralStrings("""
-            PREFIX dbp: <http://dbpedia.org/property/>
-            SELECT DISTINCT ?causeLiteral WHERE {
-              <%s> dbp:causes ?causeLiteral .
-              FILTER(LANG(?causeLiteral)="en" || LANG(?causeLiteral) = "")
-            } LIMIT 10
-            """.formatted(dbpediaResourceUri), "causeLiteral")));
+        causes.addAll(splitCommaList(sparql.selectStrings(request("""
+                PREFIX dbp: <%s>
+                SELECT DISTINCT ?causeLiteral WHERE {
+                  <%s> dbp:causes ?causeLiteral .
+                  FILTER(LANG(?causeLiteral) = "%s" || LANG(?causeLiteral) = "")
+                } LIMIT %d
+                """.formatted(DBP, resourceUri, LANG_EN, LIMIT_LITERALS), "causeLiteral"))));
 
         causes = removeDuplicates(causes);
         if (!causes.isEmpty()) return causes;
 
-        List<String> risks = splitList(selectLiteralStrings("""
-            PREFIX dbp: <http://dbpedia.org/property/>
-            SELECT DISTINCT ?complicationLiteral WHERE {
-              <%s> dbp:complications ?complicationLiteral .
-              FILTER(LANG(?complicationLiteral)="en" || LANG(?complicationLiteral) = "")
-            } LIMIT 10
-            """.formatted(dbpediaResourceUri), "complicationLiteral"));
+        List<String> risks = new ArrayList<>();
 
-        risks.addAll(splitList(selectLiteralStrings("""
-            PREFIX dbo: <http://dbpedia.org/ontology/>
-            SELECT DISTINCT ?complicationLiteral WHERE {
-              <%s> dbo:complications ?complicationLiteral .
-              FILTER(LANG(?complicationLiteral)="en" || LANG(?complicationLiteral) = "")
-            } LIMIT 10
-            """.formatted(dbpediaResourceUri), "complicationLiteral")));
+        risks.addAll(splitCommaList(sparql.selectStrings(request("""
+                PREFIX dbp: <%s>
+                SELECT DISTINCT ?complicationLiteral WHERE {
+                  <%s> dbp:complications ?complicationLiteral .
+                  FILTER(LANG(?complicationLiteral) = "%s" || LANG(?complicationLiteral) = "")
+                } LIMIT %d
+                """.formatted(DBP, resourceUri, LANG_EN, LIMIT_LITERALS), "complicationLiteral"))));
+
+        risks.addAll(splitCommaList(sparql.selectStrings(request("""
+                PREFIX dbo: <%s>
+                SELECT DISTINCT ?complicationLiteral WHERE {
+                  <%s> dbo:complications ?complicationLiteral .
+                  FILTER(LANG(?complicationLiteral) = "%s" || LANG(?complicationLiteral) = "")
+                } LIMIT %d
+                """.formatted(DBO, resourceUri, LANG_EN, LIMIT_LITERALS), "complicationLiteral"))));
 
         return removeDuplicates(risks);
     }
 
     private String queryEnglishLiteral(String subjectUri, String predicateUri) {
         String sparqlQuery = """
-            SELECT ?text WHERE {
-              <%s> <%s> ?text .
-              FILTER(LANG(?text) = "en")
-            } LIMIT 1
-            """.formatted(subjectUri, predicateUri);
+                SELECT ?text WHERE {
+                  <%s> <%s> ?text .
+                  FILTER(LANG(?text) = "%s")
+                } LIMIT %d
+                """.formatted(subjectUri, predicateUri, LANG_EN, LIMIT_ONE);
 
-        try (QueryExecutionHTTP queryExecution = (QueryExecutionHTTP) QueryExecutionHTTPBuilder
-                .service(endpoint)
-                .query(sparqlQuery)
-                .acceptHeader(SPARQL_RESULTS_JSON)
-                .timeout(timeoutMs)
-                .build()) {
-
-            ResultSet resultSet = queryExecution.execSelect();
-            if (!resultSet.hasNext()) return null;
-            return resultSet.next().getLiteral("text").getString();
-        } catch (Exception e) {
-            log.warn("DBpedia query failed for subject {} and predicate {}: {}", subjectUri, predicateUri, e.getMessage());
-            return null;
-        }
+        return sparql.selectFirstString(request(sparqlQuery, "text"));
     }
 
-    private RDFNode selectFirstNode(String sparql) {
-        try (QueryExecutionHTTP queryExecution = (QueryExecutionHTTP) QueryExecutionHTTPBuilder
-                .service(endpoint)
-                .query(sparql)
-                .acceptHeader(SPARQL_RESULTS_JSON)
-                .timeout(timeoutMs)
-                .build()) {
-
-            ResultSet resultSet = queryExecution.execSelect();
-            if (!resultSet.hasNext()) return null;
-            return resultSet.next().get("thumbnail");
-        } catch (Exception e) {
-            log.warn("DBpedia query failed for var {}: {}", "thumbnail", e.getMessage());
-            return null;
-        }
+    private SparqlHttpClient.SelectRequest request(String sparqlQuery, String varName) {
+        return new SparqlHttpClient.SelectRequest(
+                endpoint,
+                timeoutMs,
+                Map.of(),
+                sparqlQuery,
+                varName,
+                SOURCE_TAG
+        );
     }
 
-    private List<String> selectLiteralStrings(String sparql, String varName) {
-        List<String> results = new ArrayList<>();
-        try (QueryExecutionHTTP queryExecution = (QueryExecutionHTTP) QueryExecutionHTTPBuilder
-                .service(endpoint)
-                .query(sparql)
-                .acceptHeader(SPARQL_RESULTS_JSON)
-                .timeout(timeoutMs)
-                .build()) {
-
-            ResultSet resultSet = queryExecution.execSelect();
-            while (resultSet.hasNext()) {
-                QuerySolution row = resultSet.next();
-                RDFNode node = row.get(varName);
-                if (node != null && node.isLiteral()) {
-                    results.add(node.asLiteral().getString());
-                }
-            }
-        } catch (Exception e) {
-            log.warn("DBpedia query failed for var {}: {}", varName, e.getMessage());
-        }
-        return results;
+    private <T> CompletableFuture<T> future(Supplier<T> supplier) {
+        return CompletableFuture.supplyAsync(supplier, meadExecutor);
     }
 
-    private List<String> selectEnglishLabels(String sparql) {
-        return selectLiteralStrings(sparql, "label");
-    }
-
-    private static List<String> splitList(List<String> rawList) {
+    private static List<String> splitCommaList(List<String> rawList) {
         return rawList.stream()
                 .flatMap(s -> Arrays.stream(s.split(",")))
                 .map(String::trim)
                 .filter(x -> !x.isBlank())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private static List<String> removeDuplicates(List<String> inputList) {
-        Map<String, String> caseInsensitiveMap = new LinkedHashMap<>();
-        inputList.forEach(s -> caseInsensitiveMap.putIfAbsent(s.toLowerCase(), s));
-        return new ArrayList<>(caseInsensitiveMap.values());
+        Map<String, String> map = new LinkedHashMap<>();
+        inputList.forEach(s -> map.putIfAbsent(s.toLowerCase(), s));
+        return new ArrayList<>(map.values());
     }
 }
